2011-04-16  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        handle new tests in the new results html file
        https://bugs.webkit.org/show_bug.cgi?id=58715

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-15  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        old-run-webkit-tests: save the list of tests actually run to a file
        https://bugs.webkit.org/show_bug.cgi?id=58692

        * Scripts/old-run-webkit-tests:

2011-04-15  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        fix MockFileSystem.abspath() on windows
        https://bugs.webkit.org/show_bug.cgi?id=58713

        The existing code was borked on Windows if a path was passed
        in using a drive letter (e.g., "d:\foo.txt"), and would go
        into an infinite recursive loop. While win paths shouldn't
        normally be passed into the mock filesystem, this just
        bulletproofs things a bit (note that "/foo.txt" is considered
        an absolute path on windows python as well.

        * Scripts/webkitpy/common/system/filesystem_mock.py:

2011-04-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        show stderr files and httpd log files
        https://bugs.webkit.org/show_bug.cgi?id=58714

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:

2011-04-15  Shishir Agrawal  <shishir@chromium.org>

        Reviewed by James Robinson.

        Add a flag to guard Page Visibility API changes.
        https://bugs.webkit.org/show_bug.cgi?id=58464

        * Scripts/build-webkit:

2011-04-15  Chang Shu  <cshu@webkit.org>

        Reviewed by Alexey Proskuryakov.

        When a message with url embedded is added to console, the "file:" scheme
        and path should be stripped.
        https://bugs.webkit.org/show_bug.cgi?id=58665
